<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceLarge"
        android:id="@+id/main_txt_header"
        android:text="@string/main_txt_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:textAppearanceSmall"
        android:id="@+id/main_txt_description"
        android:text="@string/main_txt_description" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnBitmap"
                android:text="@string/main_btn_bitmap"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnNinePatch"
                android:text="@string/main_btn_ninepatch"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnLayerList"
                android:text="@string/main_btn_layerlist"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnStateList"
                android:text="@string/main_btn_statelist"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnLevelList"
                android:text="@string/main_btn_levellist"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnTransition"
                android:text="@string/main_btn_transition"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnInsert"
                android:text="@string/main_btn_insert"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnClip"
                android:text="@string/main_btn_clip"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnScale"
                android:text="@string/main_btn_scale"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:id="@+id/btnShape"
                android:text="@string/main_btn_shape"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
